fix formatting: add EOF newlines and trim spaces

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -26,8 +26,8 @@
     -->
     <style>
       @font-face {
-        font-family: 'Galano';
-        src: url('/fonts/GalanoGrotesqueAltBlack.otf') format('opentype');
+        font-family: "Galano";
+        src: url("/fonts/GalanoGrotesqueAltBlack.otf") format("opentype");
         font-weight: 900;
         font-style: normal;
       }
